--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,13 +1,14 @@
 {
   "manifest_version": 3,
-  "name": "Gmail HTML 傳送器 (注入式)",
-  "version": "3.0",
-  "description": "在 Gmail 介面中加入一個按鈕，用來傳送當前頁面的 HTML 到指定的 API。",
+  "name": "Scambino",
+  "version": "1.0",
+  "description": "個人防詐小助理",
   "permissions": [
     "storage" 
   ],
   "host_permissions": [
-    "http://localhost/*"
+    "http://localhost/*",
+    "http://10.246.69.236:5000/*"
   ],
   "background": {
     "service_worker": "background.js"
@@ -19,9 +20,24 @@
       "js": ["content.js"]
     }
   ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_title": "Scambino 個人助理",
+    "default_icon": {
+      "16": "images/scambino16.png",
+      "48": "images/scambino48.png",
+     "128": "images/scambino128.png"
+    }
+  },
   "icons": {
     "16": "images/scambino16.png",
     "48": "images/scambino48.png",
     "128": "images/scambino128.png"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["images/scambino48.png"],
+      "matches": ["*://mail.google.com/*"]
+    }
+  ]
 }
